# canihasashowplz

./: .gitignore  Makefile  README.md  conftest.py  model_serving_samconfig.toml  model_serving_template.yaml  model_training_samconfig.toml  model_training_template.yaml  pyproject.toml  samconfig.toml  template.yaml
.aws-sam/: build.toml
.github/workflows/: deploy_sam.yaml  on_pull_request_to_main.yaml  verify_pull_request.yaml
app/: Dockerfile  pyproject.toml
app/src/canihaveatvshowplz/: app.py
client/: .env  .env.production  .prettierrc  index.html  package-lock.json  package.json
client/src/: App.jsx  constants.js  main.jsx
client/src/api/: useGetPredictionRequest.js  usePostRecommendationRequest.js
client/src/components/: ErrorMessage.jsx  ShowCard.jsx
client/src/contexts/: PredictionContext.jsx
client/src/hooks/: useInterval.js
client/src/pages/: AboutPage.jsx  MakePredictionPage.jsx  MakeRecommendationPage.jsx  ProcessingPage.jsx  RecommendationResultsPage.jsx
client/src/routes/: Root.jsx
lambdas/prediction-ack/: Dockerfile  pyproject.toml
lambdas/prediction-ack/src/: app.py  app_test.py  helpers.py
lambdas/prediction-worker/: Dockerfile  pyproject.toml
lambdas/prediction-worker/src/: app.py  app_test.py  helpers.py
model/: model.ipynb  pipelines.py  pyproject.toml  train_model.py  transformers.py
model-inference/: Dockerfile  app.py  push_encoder_to_s3.py  push_to_ecr.py  pyproject.toml
model-inference/model-inference/: inference.py
model-inference/src/: inference.py
model/data/: functions.py  imdb_shows.csv  normalize_data_script.py  shows.csv  upload_to_dynamo_prod_script.py  upload_to_dynamo_staging_script.py
model/model/: functions.py  normalize_data_script.py  pipelines.py  train_model.py  transformers.py  upload_model_to_s3.py  zip_and_tar_model.py
model/model/data/: shows.csv
model_inference/: Dockerfile  app.py  push_to_ecr.py  pyproject.toml
model_inference/model_inference/: inference.py
model_trainer/: Dockerfile  pyproject.toml
model_trainer/model_trainer/: app.py
model_training/: Dockerfile  model.ipynb  push_to_ecr.py  pyproject.toml  train.py
model_training/model_training/: data.py  graph.py  normalize_data_script.py  pipelines.py  train_model.py  transformers.py  upload_model_to_s3.py  upload_to_dynamo_prod_script.py  upload_to_dynamo_staging_script.py
model_training/model_training/data/: shows.csv
prediction_ack/: Dockerfile  pyproject.toml
prediction_ack/prediction_ack/: app.py  app_test.py  prediction_ack.py  prediction_ack_test.py
prediction_getter/: Dockerfile  pyproject.toml
prediction_getter/prediction_getter/: app.py  app_test.py  helpers.py  prediction_getter.py  prediction_getter_test.py
prediction_worker/: Dockerfile  pyproject.toml
prediction_worker/prediction_worker/: app.py  app_test.py  helpers.py  prediction_worker_test.py
ratings_exporter/: Dockerfile  pyproject.toml
ratings_exporter/ratings_exporter/: app.py
