[tool.poetry]
name = "canihaveatvshowplz"
version = "1.0.0"
description = ""
authors = []
readme = "README.md"
packages = []

[tool.poetry.group.main.dependencies]
python = "^3.11"

[tool.poetry.group.prediction-ack.dependencies]
prediction-ack = { path = "lambdas/prediction-ack", develop = true}

[tool.poetry.group.prediction-worker.dependencies]
prediction-worker = { path = "lambdas/prediction-worker", develop = true}

[tool.poetry.group.model.dependencies]
model = { path = "model", develop = true}

[tool.poetry.group.model-inference.dependencies]
model-inference = { path = "model-inference", develop = true}

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"