[tool.poetry]
name = "canihaveatvshowplz"
version = "1.0.0"
description = ""
authors = []
readme = "README.md"
packages = []

[tool.poetry.group.main.dependencies]
python = "^3.11"

[tool.poetry.group.prediction_ack.dependencies]
prediction_ack = { path = "prediction_ack", develop = true}

[tool.poetry.group.prediction_worker.dependencies]
prediction_worker = { path = "prediction_worker", develop = true}

[tool.poetry.group.prediction_getter.dependencies]
prediction_getter = { path = "prediction_getter", develop = true}

[tool.poetry.group.model_training.dependencies]
model_training = { path = "model_training", develop = true}

[tool.poetry.group.model_inference.dependencies]
model_inference = { path = "model_inference", develop = true}

[tool.poetry.group.ratings_exporter.dependencies]
ratings_exporter = { path = "ratings_exporter", develop = true}

[tool.poetry.group.model_trainer.dependencies]
model_trainer = { path = "model_trainer", develop = true}

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"


[tool.poetry.dependencies]
boto3 = "^1.34.14"
botocore = "^1.34.14"
pytest-xdist = "^3.5.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"