[tool.poetry]
name = "model-inference"
version = "1.0.0"
description = ""
authors = []
packages = [{include = "src"}]

[tool.poetry.scripts]
push-to-ecr = "push_to_ecr:main"
push-encoder-to-s3 = "push_encoder_to_s3:main"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.0"
pillow = "^10.1.0"
joblib = "^1.3.2"
numpy = "^1.26.2"
pandas = "^2.1.4"
boto3 = "^1.33.11"
community = "^1.0.0b1"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
flask = "^3.0.0"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"