[tool.poetry]
name = "canihaveatvshowplz-model"
version = "1.0.0"
description = ""
authors = []
packages = [{include = './**/*.py'}]

[tool.poetry.scripts]
normalize-imdb-data = "data.normalize_data_script:start"
upload-to-dynamo-staging = "data.upload_to_dynamo_staging_script:start"
upload-to-dynamo-prod = "data.upload_to_dynamo_prod_script:start"
train-model = "train_model:start"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.0"
pillow = "^10.1.0"
joblib = "^1.3.2"
numpy = "^1.26.2"
pandas = "^2.1.4"
boto3 = "^1.33.11"
community = "^1.0.0b1"
networkx = "^3.2.1"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"