[tool.poetry]
name = "model_training"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.scripts]
normalize-imdb-data = "model_training.normalize_data_script:start"
upload-to-dynamo-staging = "model_training.upload_to_dynamo_staging_script:start"
upload-to-dynamo-prod = "model_training.upload_to_dynamo_prod_script:start"
train-model = "model_training.train_model:start"
gzip-tar-model = "model_training.zip_and_tar_model:start"
upload-model-to-s3 = "model_training.upload_model_to_s3:start"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.0"
pillow = "^10.1.0"
joblib = "^1.3.2"
numpy = "^1.26.2"
pandas = "^2.1.4"
boto3 = "^1.33.11"
community = "^1.0.0b1"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"