[tool.poetry]
name = "model_training"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.scripts]
push-to-ecr = "push_to_ecr:main"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.0"
pillow = "^10.1.0"
joblib = "^1.3.2"
numpy = "^1.26.2"
pandas = "^2.1.4"
boto3 = "^1.33.11"
community = "^1.0.0b1"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
jupyter = "^1.0.0"
s3fs = "^2023.12.2"
sagemaker-training = "^4.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"