[tool.poetry]
name = "prediction-ack"
version = "1.0.0"
description = ""
authors = []
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.0"
pillow = "^10.1.0"
joblib = "^1.3.2"
numpy = "^1.26.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"